# not-dot-net

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  old-intranet-pages.json  old-intranet-resources.json  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
alembic/versions/: 0006_add_token_verified.py  0014_add_user_preferred_locale.py  0015_add_booking_reminder_sent_at.py  0015_add_booking_reminder_sent_lead_days.py
not_dot_net/: app.py  cli.py  config.py
not_dot_net/backend/: app_settings.py  audit.py  booking_models.py  booking_service.py  csrf.py  data_io.py  db.py  encrypted_storage.py  mail.py  notifications.py  page_models.py  page_service.py  phone_validation.py  profile_photo.py  roles.py  schemas.py  secrets.py  (+10 more)
old-intranet-pages/: informations.md  it-services.md  locaux.md  reglement-interieur.md  useful-information.md
tests/: conftest.py  test_ad_account_creation.py  test_app_settings.py  test_audit_diffs.py  test_audit_log_view.py  test_auth_endpoints.py  test_booking_reminders.py  test_booking_service.py  test_booking_ui_helpers.py  test_config_sections.py  test_dashboard_helpers.py  test_data_io.py  test_directory.py  test_encrypted_storage.py  test_i18n.py  test_import_upload.py  test_ldap.py  test_ldap_provision.py  test_login.py  test_mail.py  test_model.py  test_new_request.py  test_notifications.py  test_onboarding_e2e.py  test_onboarding_ui.py  test_page_service.py  test_pages_integration.py  test_permissions.py  test_phone_validation.py  test_profile_photo.py  test_rbac_integration.py  test_resend_notification.py  test_roles.py  test_secrets.py  test_security.py  test_seeding.py  test_setup_wizard.py  test_tenure_onboarding.py  test_tenure_service.py  test_token_expiry.py  (+14 more)
(+37 files in other folders)
